--- a/BAM.WebAPI/appsettings.json
+++ b/BAM.WebAPI/appsettings.json
@@ -5,5 +5,27 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "InterestRateRules": {
+    "Rules": [
+      {
+        "MinInclusive": 20,
+        "MaxExclusive": 50,
+        "RatesByDuration": {
+          "1": 20.0,
+          "3": 15.0,
+          "5": 10.0
+        }
+      },
+      {
+        "MinInclusive": 50,
+        "MaxExclusive": 101,
+        "RatesByDuration": {
+          "1": 12.0,
+          "3": 8.0,
+          "5": 5.0
+        }
+      }
+    ]
+  },
   "AllowedHosts": "*"
 }
