--- a/BAM.Domain/BAM.Domain.csproj
+++ b/BAM.Domain/BAM.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BAM.Contracts\BAM.Contracts.csproj" />
+  </ItemGroup>
+
 </Project>
