--- a/BAM.Infra/BAM.Infra.csproj
+++ b/BAM.Infra/BAM.Infra.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\BAM.Domain\BAM.Domain.csproj" />
+    <ProjectReference Include="..\BAM.Contracts\BAM.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
